# Metapixel

./: .gitignore  CategorizedColors.csv  Cleaned_Colors.csv  Color.csv  LICENSE  README.md  categorize_colors.py  cleanup_colors.py  color_palette_detector.py  pyproject.toml  ratios.py  readme  test_opencv.py
metapixel/: cli.py  core.py  viz.py
